feat: standardise hero sections with company name H1 and intent subheadings

--- a/about/index.html
+++ b/about/index.html
@@ -55,14 +55,8 @@
                 style="color: var(--secondary-color); font-weight: 700; text-transform: uppercase; letter-spacing: 2px; margin-bottom: 10px; display: block; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.5));">
                 Since 2008
             </span>
-            <h1 style="font-size: 4rem; color: white; margin-bottom: 20px; text-shadow: 0 4px 15px rgba(0,0,0,0.4);">
-                Commitment to Comfort
-            </h1>
-            <p
-                style="font-size: 1.3rem; max-width: 600px; margin: 0 auto; opacity: 0.95; color: white; text-shadow: 0 2px 8px rgba(0,0,0,0.4);">
-                Providing high-performance HVAC solutions for residential and commercial success across Southern
-                California.
-            </p>
+            <h1>Advanced Mechanical HVAC Services</h1>
+            <p class="hero-intent">Dedicated to Professional Comfort & Engineering Excellence Since 2008</p>
         </div>
     </section>
 
