--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
     <section class="av-hvac-hero" id="home">
         <div class="hero-overlay"></div>
         <div class="container">
-            <h1>Los Angeles Premium HVAC Engineering</h1>
-            <p>Southern California's trusted choice for heating and air conditioning since 2008. From Los Angeles
-                high-rises to Santa Clarita residential estates - your comfort is our commitment.</p>
+            <h1>Advanced Mechanical HVAC Services</h1>
+            <p class="hero-intent">Premium Los Angeles HVAC Engineering & Efficient Climate Solutions</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="#services" class="btn btn-secondary">Our Services</a>
