--- a/services/index.html
+++ b/services/index.html
@@ -50,9 +50,8 @@
         style="background-image: url('/images/hvac-hero-v2.webp'); background-size: cover; background-position: center;">
         <div class="hero-overlay"></div>
         <div class="container">
-            <h1>Comprehensive HVAC Solutions</h1>
-            <p>From high-efficiency residential cooling to heavy-duty commercial rooftop units, we provide expert
-                engineering for every climate challenge.</p>
+            <h1>Advanced Mechanical HVAC Services</h1>
+            <p class="hero-intent">Comprehensive Cooling & Heating Engineering for LA Properties</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="#services-grid" class="btn btn-secondary">Explore Services</a>
@@ -212,7 +211,7 @@
                 </p>
             </div>
             <div class="aw-footer-services">
-                                <h4>Our Services</h4>
+                <h4>Our Services</h4>
                 <ul>
                     <li><a href="/services/air-conditioning/">Air Conditioning</a></li>
                     <li><a href="/services/heating-solutions/">Heating Solutions</a></li>
@@ -223,9 +222,10 @@
                 </ul>
             </div>
             <div class="aw-footer-locations">
-                                <h4>Service Areas</h4>
+                <h4>Service Areas</h4>
                 <ul>
-                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li><li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
+                    <li><a href="/locations/los-angeles/">Los Angeles, CA</a></li>
+                    <li><a href="/locations/santa-clarita/">Santa Clarita, CA</a></li>
                     <li><a href="/locations/">Palmdale, CA</a></li>
                     <li><a href="/locations/">Los Angeles County</a></li>
                     <li><a href="/locations/">Orange County</a></li>
@@ -235,7 +235,8 @@
         </div>
         <div class="aw-footer-bottom">
             <p>© <span id="year"></span> Advanced Mechanical HVAC Services. All rights reserved. | State Lic. 909323 |
-                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a></p>
+                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a>
+            </p>
         </div>
     </footer>
 
