--- a/contact/index.html
+++ b/contact/index.html
@@ -45,9 +45,8 @@
         style="background-image: url('/images/hvac-hero-v2.webp'); background-size: cover; background-position: center;">
         <div class="hero-overlay"></div>
         <div class="container">
-            <h1>Request HVAC Service</h1>
-            <p>Expert heating and cooling solutions are just a call away. Get a professional estimate today anywhere in
-                Southern California.</p>
+            <h1>Advanced Mechanical HVAC Services</h1>
+            <p class="hero-intent">Request a Professional Engineering Consultation & Estimate</p>
         </div>
     </section>
 
