--- a/locations/los-angeles/index.html
+++ b/locations/los-angeles/index.html
@@ -50,9 +50,8 @@
         style="background-image: url('/images/hvac-hero-v2.webp'); background-size: cover; background-position: center;">
         <div class="hero-overlay"></div>
         <div class="container">
-            <h1>Premium HVAC Services in Los Angeles, CA</h1>
-            <p>Southern California's premier choice for institutional-grade heating and air conditioning. Expert
-                engineering for Los Angeles residential and commercial properties since 2008.</p>
+            <h1>Advanced Mechanical HVAC Services</h1>
+            <p class="hero-intent">LA's Premiere Engineering Firm for High-Performance HVAC Solutions</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="/contact/" class="btn btn-secondary">Get Free Estimate</a>
@@ -165,7 +164,8 @@
         </div>
         <div class="aw-footer-bottom">
             <p>© <span id="year"></span> Advanced Mechanical HVAC Services. All rights reserved. | State Lic. 909323 |
-                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a></p>
+                <a href="/sitemap.xml">Sitemap</a> | <a href="/privacy/">Privacy Policy</a>
+            </p>
         </div>
     </footer>
 
