feat: update hero subheadlines to 'Heating and Cooling Experts'

--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
                 Since 2008
             </span>
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">Dedicated to Professional Comfort & Engineering Excellence Since 2008</p>
+            <p class="hero-intent">Heating and Cooling Experts</p>
         </div>
     </section>
 
