--- a/services/index.html
+++ b/services/index.html
@@ -51,7 +51,7 @@
         <div class="hero-overlay"></div>
         <div class="container">
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">Comprehensive Cooling & Heating Engineering for LA Properties</p>
+            <p class="hero-intent">Heating and Cooling Experts</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="#services-grid" class="btn btn-secondary">Explore Services</a>
