--- a/contact/index.html
+++ b/contact/index.html
@@ -46,7 +46,7 @@
         <div class="hero-overlay"></div>
         <div class="container">
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">Request a Professional Engineering Consultation & Estimate</p>
+            <p class="hero-intent">Heating and Cooling Experts</p>
         </div>
     </section>
 
