--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="hero-overlay"></div>
         <div class="container">
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">Premium Los Angeles HVAC Engineering & Efficient Climate Solutions</p>
+            <p class="hero-intent">Heating and Cooling Experts</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="#services" class="btn btn-secondary">Our Services</a>
