--- a/locations/los-angeles/index.html
+++ b/locations/los-angeles/index.html
@@ -51,7 +51,7 @@
         <div class="hero-overlay"></div>
         <div class="container">
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">LA's Premiere Engineering Firm for High-Performance HVAC Solutions</p>
+            <p class="hero-intent">Heating and Cooling Experts</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="/contact/" class="btn btn-secondary">Get Free Estimate</a>
