feat: restructure company profile to focus on Commercial Kitchen Ventilation and 200+ client history

--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
                 Since 2008
             </span>
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">Heating and Cooling Experts</p>
+            <p class="hero-intent">Kitchen Ventilation & Climate Control Specialists</p>
         </div>
     </section>
 
@@ -66,16 +66,16 @@
             <i class="fas fa-award philosophy-bg-icon" style="color: rgba(30, 60, 114, 0.05); font-size: 25rem;"></i>
             <p class="philosophy-quote"
                 style="color: var(--primary-navy); font-size: 2.2rem; font-weight: 300; position: relative; z-index: 1;">
-                "We believe HVAC service should be <span
-                    style="color: var(--secondary-color); font-weight: 700;">reliable,
-                    transparent, and expert-led</span>. That's why we bring over 15 years of institutional experience to
-                every home."
+                "Our top quality service brings specialized HVAC solutions from custom home installations to commercial
+                kitchen ventilation. Since 2008, we have worked with over <span
+                    style="color: var(--secondary-color); font-weight: 700;">200+ clients</span> to bring comfort and
+                climate environment satisfaction."
             </p>
             <div class="philosophy-divider"
                 style="background: var(--secondary-color); width: 100px; height: 4px; margin: 40px auto; border-radius: 2px;">
             </div>
-            <p class="philosophy-sub" style="font-size: 1.2rem; color: #666; font-weight: 500;">Serving Santa Clarita,
-                Palmdale, and the greater Los Angeles area with professional HVAC engineering.</p>
+            <p class="philosophy-sub" style="font-size: 1.2rem; color: #666; font-weight: 500;">Serving Los Angeles,
+                Orange, and Ventura Counties with professional environment control.</p>
         </div>
     </section>
 
@@ -99,10 +99,10 @@
                 </div>
                 <div class="stat-item">
                     <span class="stat-number"
-                        style="color: var(--secondary-color); font-size: 3rem; font-weight: 800; display: block;">24/7</span>
+                        style="color: var(--secondary-color); font-size: 3rem; font-weight: 800; display: block;">200+</span>
                     <span class="stat-label"
-                        style="color: white; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Emergency
-                        Support</span>
+                        style="color: white; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Satisfied
+                        Clients</span>
                 </div>
             </div>
         </div>
@@ -120,21 +120,20 @@
                     <h2 style="color: var(--primary-navy); font-size: 2.5rem; margin: 15px 0 25px;">Expert HVAC
                         Engineering Since 2008</h2>
                     <p style="margin-bottom: 20px; font-size: 1.1rem; line-height: 1.8; color: #444;">
-                        Advanced Mechanical HVAC Services was founded with a simple mission: to provide Los Angeles
-                        residents and businesses with institutional-grade climate control. We understand that
-                        HVAC systems are the heartbeat of a property, and maintaining them shouldn't be stressful or
-                        confusing.
+                        Advanced Mechanical is a Los Angeles based established business, proudly serving Southern
+                        California including Los Angeles, Orange, and Ventura Counties. We specialize in providing
+                        satisfactory environment climate control solutions to our customers.
                     </p>
                     <p style="margin-bottom: 20px; color: #555; line-height: 1.8;">
-                        That's why we created a better solution. We provide a full spectrum of mechanical services -
-                        from residential air conditioning repair to industrial-scale rooftop unit engineering. We offer
-                        free estimates, provide same-day emergency support, and guarantee professional results on every
-                        single call.
+                        Our top quality service brings expert HVAC solutions to custom home installations as well as
+                        commercial buildings. We are particularly recognized for our specialty in <strong>Commercial
+                            Kitchen Ventilation Installs</strong>, ensuring that high-performance environments operate
+                        with maximum efficiency and safety.
                     </p>
                     <p style="color: #555; line-height: 1.8;">
-                        Our team is local, professional, and dedicated to giving you the best experience possible. We
-                        pride ourselves on quality workmanship, honest pricing, and making property improvements as easy
-                        as possible for you.
+                        Established in 2008, we have worked with over 200 clients to bring comfort and climate
+                        environment satisfaction. Whether for a luxury residence or a demanding commercial kitchen, we
+                        bring the same level of engineering precision and dedication.
                     </p>
                     <div style="margin-top: 30px; border-left: 4px solid var(--secondary-color); padding-left: 20px;">
                         <p style="font-weight: 800; color: var(--primary-navy); font-size: 1.2rem;">Advanced Mechanical
