--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Advanced Mechanical HVAC Services | Get Your Free Estimate</title>
     <meta name="description"
-        content="Contact Advanced Mechanical HVAC Services in the Southern California. Call (818) 660-2481 for free estimates on handyman, hauling, and landscape services. Trusted professional results.">
+        content="Contact Advanced Mechanical for Commercial Kitchen Ventilation and HVAC services across Los Angeles, Orange, and Ventura Counties. Established in 2008 with 200+ clients. Call (818) 660-2481.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,7 +46,7 @@
         <div class="hero-overlay"></div>
         <div class="container">
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">Heating and Cooling Experts</p>
+            <p class="hero-intent">Kitchen Ventilation & Climate Control Specialists</p>
         </div>
     </section>
 
@@ -67,8 +67,8 @@
                     <a href="tel:8186602481"
                         style="font-size: 3rem; font-weight: 800; color: white; text-decoration: none; display: block; margin-bottom: 15px; font-family: var(--font-heading);">(818)
                         660-2481</a>
-                    <p style="color: rgba(255,255,255,0.9); font-size: 1.1rem; margin-bottom: 25px;">Expert HVAC
-                        consultation available Monday - Saturday.</p>
+                    <p style="color: rgba(255,255,255,0.9); font-size: 1.1rem; margin-bottom: 25px;">Specializing in
+                        satisfactory environment climate control solutions for LA, Orange, and Ventura Counties.</p>
                     <a href="tel:8186602481" class="btn btn-primary" style="font-size: 1.2rem; padding: 15px 40px;">Call
                         Now</a>
                 </div>
@@ -116,33 +116,23 @@
             <div class="features-grid" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
                 <div class="feature-card">
                     <i class="fas fa-map-marker-alt feature-icon" style="color: var(--secondary-color);"></i>
+                    <h3>Tri-County Service</h3>
+                    <p>Los Angeles, Orange, and Ventura Counties</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-map-marker-alt feature-icon"></i>
                     <h3>Los Angeles</h3>
-                    <p><a href="/locations/los-angeles/">Service in Los Angeles</a></p>
+                    <p><a href="/locations/los-angeles/">Serving Greater LA</a></p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-map-marker-alt feature-icon"></i>
                     <h3>Santa Clarita</h3>
-                    <p><a href="/locations/santa-clarita/">Service in Santa Clarita</a></p>
+                    <p>Santa Clarita & Surroundings</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-map-marker-alt feature-icon"></i>
-                    <h3>Palmdale</h3>
-                    <p><a href="/locations/palmdale/">Service in Palmdale</a></p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-map-marker-alt feature-icon"></i>
-                    <h3>Burbank</h3>
-                    <p><a href="/locations/">Service in Burbank</a></p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-map-marker-alt feature-icon"></i>
-                    <h3>Glendale</h3>
-                    <p><a href="/locations/">Service in Glendale</a></p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-map-marker-alt feature-icon"></i>
-                    <h3>Pasadena</h3>
-                    <p><a href="/locations/">Service in Pasadena</a></p>
+                    <h3>Specialty Service</h3>
+                    <p>Commercial Kitchen Ventilation Installs</p>
                 </div>
             </div>
         </div>
