--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Los Angeles HVAC Services | Advanced Mechanical HVAC Services</title>
+    <title>Commercial Kitchen Ventilation & HVAC Experts | Advanced Mechanical</title>
     <meta name="description"
-        content="Los Angeles's premier HVAC engineering firm. Established in 2008, Advanced Mechanical provides premium heating and cooling solutions across LA and Southern California. Call (818) 660-2481.">
+        content="Los Angeles's premier specialists in Commercial Kitchen Ventilation and HVAC engineering. Established in 2008, serving LA, Orange, and Ventura counties with 200+ successful projects.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -94,7 +94,7 @@
         <div class="hero-overlay"></div>
         <div class="container">
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">Heating and Cooling Experts</p>
+            <p class="hero-intent">Commercial Kitchen Ventilation Specialists</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="#services" class="btn btn-secondary">Our Services</a>
@@ -106,46 +106,47 @@
     <section class="features" style="background: linear-gradient(135deg, #f0f7ff 0%, #eef2f7 100%);">
         <div class="container">
             <div class="section-title">
-                <h2>Why Choose Advanced Mechanical?</h2>
-                <p>We provide reliable, professional, and efficient climate control solutions. Serving Southern
-                    California since 2008 with a focus on quality and customer satisfaction.</p>
+                <h2>Specialized Climate Control Solutions</h2>
+                <p>We are a Los Angeles based established business, specializing in providing satisfactory environment
+                    climate control solutions. Serving Los Angeles, Orange, and Ventura Counties since 2008 with over
+                    200 satisfied clients.</p>
             </div>
             <div class="features-grid grid-balance-4">
                 <!-- Card 1 - Red Border -->
                 <div class="feature-card"
                     style="border: 3px solid var(--secondary-color); border-radius: 15px; background: white; box-shadow: 0 4px 15px rgba(229, 57, 53, 0.2); transition: transform 0.3s ease, box-shadow 0.3s ease;">
-                    <i class="fas fa-certificate feature-icon"
-                        style="color: var(--secondary-color); font-size: 48px;"></i>
-                    <h3 style="color: #1a1a1a;">Licensed & Insured</h3>
-                    <p>Expert service you can trust. State License #909323. We follow strict safety protocols and
-                        industry standards on every job.</p>
+                    <i class="fas fa-utensils feature-icon" style="color: var(--secondary-color); font-size: 48px;"></i>
+                    <h3 style="color: #1a1a1a;">Kitchen Specialists</h3>
+                    <p>Our top-quality service brings expert HVAC solutions to commercial kitchens, focusing on
+                        efficient ventilation and climate satisfaction.</p>
                 </div>
 
                 <!-- Card 2 - Navy Border -->
                 <div class="feature-card"
                     style="border: 3px solid var(--primary-navy); border-radius: 15px; background: white; box-shadow: 0 4px 15px rgba(30, 60, 114, 0.2); transition: transform 0.3s ease, box-shadow 0.3s ease;">
-                    <i class="fas fa-clock feature-icon" style="color: var(--primary-navy); font-size: 48px;"></i>
-                    <h3 style="color: #1a1a1a;">Prompt Response</h3>
-                    <p>HVAC issues can't wait. We offer quick scheduling and reliable arrival times across Los Angeles,
-                        Orange, and Ventura counties.</p>
+                    <i class="fas fa-map-marked-alt feature-icon"
+                        style="color: var(--primary-navy); font-size: 48px;"></i>
+                    <h3 style="color: #1a1a1a;">Tri-County Serving</h3>
+                    <p>Established Los Angeles presence serving the broader Southern California region, including Los
+                        Angeles, Orange, and Ventura Counties.</p>
                 </div>
 
                 <!-- Card 3 - Red Border -->
                 <div class="feature-card"
                     style="border: 3px solid var(--secondary-color); border-radius: 15px; background: white; box-shadow: 0 4px 15px rgba(229, 57, 53, 0.2); transition: transform 0.3s ease, box-shadow 0.3s ease;">
-                    <i class="fas fa-tools feature-icon" style="color: var(--secondary-color); font-size: 48px;"></i>
-                    <h3 style="color: #1a1a1a;">Full-Service HVAC</h3>
-                    <p>From residential repairs to large-scale commercial installations, our team handles all your
-                        heating and cooling needs with precision.</p>
+                    <i class="fas fa-building feature-icon" style="color: var(--secondary-color); font-size: 48px;"></i>
+                    <h3 style="color: #1a1a1a;">Commercial & Luxury</h3>
+                    <p>Expert engineering for commercial buildings and custom home installations, ensuring premium
+                        environment comfort.</p>
                 </div>
 
                 <!-- Card 4 - Navy Border -->
                 <div class="feature-card"
                     style="border: 3px solid var(--primary-navy); border-radius: 15px; background: white; box-shadow: 0 4px 15px rgba(30, 60, 114, 0.2); transition: transform 0.3s ease, box-shadow 0.3s ease;">
-                    <i class="fas fa-history feature-icon" style="color: var(--primary-navy); font-size: 48px;"></i>
-                    <h3 style="color: #1a1a1a;">15+ Years Experience</h3>
-                    <p>Established in 2008, we've successfully completed over 200 major projects and countless service
-                        calls for satisfied clients.</p>
+                    <i class="fas fa-users feature-icon" style="color: var(--primary-navy); font-size: 48px;"></i>
+                    <h3 style="color: #1a1a1a;">200+ Successful Clients</h3>
+                    <p>Established in 2008, we have worked with over 200 clients to bring comfort and climate
+                        environment satisfaction.</p>
                 </div>
             </div>
         </div>
@@ -160,38 +161,39 @@
             </div>
             <div class="features-grid grid-balance-3">
                 <!-- Service 1 -->
-                <div class="premium-service-card" style="background-image: url('/images/ac-repair.webp');">
-                    <i class="fas fa-snowflake card-icon"></i>
-                    <h3>Air Conditioning</h3>
-                    <p>AC Repair & Tune-Ups<br>
-                        New System Installation<br>
-                        Energy Efficient Upgrades<br>
-                        Thermostat Replacement<br>
-                        Freon Recharging</p>
-                    <a href="/services/air-conditioning/" class="learn-more">Learn More <i
+                <div class="premium-service-card"
+                    style="background-image: url('/images/commercial-hvac.webp'); border: 5px solid var(--secondary-color);">
+                    <i class="fas fa-utensils card-icon"></i>
+                    <h3 style="font-size: 1.8rem;">Kitchen Ventilation</h3>
+                    <p>Commercial Hood Installs<br>
+                        Exhaust Fan Repair<br>
+                        Make-Up Air Systems<br>
+                        Fire Suppression Link<br>
+                        Grease Duct Sealing</p>
+                    <a href="/services/commercial-hvac/" class="learn-more">Specialty Details <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
 
                 <!-- Service 2 -->
-                <div class="premium-service-card" style="background-image: url('/images/heating-service.webp');">
-                    <i class="fas fa-fire card-icon"></i>
-                    <h3>Heating Solutions</h3>
-                    <p>Furnace Repair<br>
-                        Heat Pump Service<br>
-                        Heating Maintenance<br>
-                        System Replacement<br>
-                        Safety Inspections</p>
-                    <a href="/services/heating-solutions/" class="learn-more">Learn More <i
+                <div class="premium-service-card" style="background-image: url('/images/custom-hvac.webp');">
+                    <i class="fas fa-home card-icon"></i>
+                    <h3>Custom Home HVAC</h3>
+                    <p>Luxury Estate Cooling<br>
+                        Architectural Registers<br>
+                        Zoned Climate Control<br>
+                        Quiet-Run Technology<br>
+                        Smart Home Integration</p>
+                    <a href="/services/custom-hvac/" class="learn-more">Learn More <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
 
                 <!-- Service 3 -->
                 <div class="premium-service-card" style="background-image: url('/images/commercial-hvac.webp');">
-                    <i class="fas fa-building card-icon"></i>
-                    <h3>Commercial HVAC</h3>
+                    <i class="fas fa-city card-icon"></i>
+                    <h3>Commercial Buildings</h3>
                     <p>Rooftop Unit Service<br>
-                        Multi-Zone Systems<br>
-                        Commercial Maintenance<br>
+                        VAV Box Calibration<br>
+                        Energy Management<br>
                         Institutional Projects<br>
                         Tenant Improvements</p>
                     <a href="/services/commercial-hvac/" class="learn-more">Learn More <i
@@ -273,11 +275,14 @@
                 </div>
 
                 <div class="av-palmdale-tech-points">
-                    <div class="av-palmdale-tech-point"><span>1</span> Call us at (818) 660-2481 to schedule a visit
+                    <div class="av-palmdale-tech-point"><span>1</span> Specializing in Commercial Kitchen Ventilation
+                        Installs
                     </div>
-                    <div class="av-palmdale-tech-point"><span>2</span> We diagnose your system and provide a clear quote
+                    <div class="av-palmdale-tech-point"><span>2</span> Satisfactory Environment Climate Control
+                        Solutions
                     </div>
-                    <div class="av-palmdale-tech-point"><span>3</span> Our expert team completes the work efficiently!
+                    <div class="av-palmdale-tech-point"><span>3</span> Serving LA, Orange, and Ventura Counties Since
+                        2008
                     </div>
                 </div>
 
