--- a/locations/los-angeles/index.html
+++ b/locations/los-angeles/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium HVAC Services in Los Angeles, CA | Advanced Mechanical</title>
+    <title>Commercial Kitchen Ventilation & HVAC | Los Angeles, CA</title>
     <meta name="description"
-        content="Expert AC repair, high-efficiency heating, and commercial HVAC engineering in Los Angeles, CA. Licensed professionals (Lic #909323) serving LA since 2008. Call (818) 660-2481.">
+        content="Los Angeles's premier specialists in Commercial Kitchen Ventilation and industrial-grade HVAC. Serving LA, Orange, and Ventura counties since 2008 with 200+ clients. Call (818) 660-2481.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,7 +51,7 @@
         <div class="hero-overlay"></div>
         <div class="container">
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">Heating and Cooling Experts</p>
+            <p class="hero-intent">Commercial Kitchen Ventilation Specialists</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="/contact/" class="btn btn-secondary">Get Free Estimate</a>
@@ -64,38 +64,38 @@
         <div class="container">
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 60px; align-items: start;">
                 <div>
-                    <h2>Superior Climate Solutions for Los Angeles</h2>
+                    <h2>Established Climate Control in Los Angeles</h2>
                     <p style="margin-bottom: 25px; font-size: 1.1rem; color: #444;">
-                        Advanced Mechanical provides specialized HVAC engineering services throughout the greater Los
-                        Angeles area. From high-efficiency split systems for modern homes to complex rooftop units for
-                        commercial buildings, our institutional expertise ensures your comfort in the LA heat.
+                        Advanced Mechanical is a Los Angeles based established business, proudly serving Southern
+                        California including Los Angeles, Orange, and Ventura Counties. We specialize in providing
+                        satisfactory environment climate control solutions to our customers.
                     </p>
                     <p style="margin-bottom: 25px; font-size: 1.1rem; color: #444;">
-                        We understand the unique demands of the Los Angeles climate and building structures, offering
-                        custom-fit solutions that maximize efficiency and system longevity.
+                        With over 200 clients served since 2008, we bring institutional-grade quality to every project.
+                        Whether it's a custom home installation or a complex commercial building, our focus is on
+                        climate environment satisfaction.
                     </p>
 
                     <h3>LA Specialized Services:</h3>
                     <ul style="list-style: none; padding: 0; margin: 25px 0;">
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
-                            <i class="fas fa-check-circle"
-                                style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Luxury Residential AC Installations
+                            <i class="fas fa-utensils" style="color: var(--secondary-color); margin-right: 15px;"></i>
+                            Commercial Kitchen Ventilation (Our Specialty)
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
                             <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Commercial HVAC Repair & Optimization
+                            Custom Home HVAC Installations
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
                             <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            Advanced Air Filtration (IAQ)
+                            Commercial Building Climate Control
                         </li>
                         <li style="margin-bottom: 15px; display: flex; align-items: center;">
                             <i class="fas fa-check-circle"
                                 style="color: var(--secondary-color); margin-right: 15px;"></i>
-                            24/7 Emergency Technical Support
+                            Satisfactory Environment Solutions
                         </li>
                     </ul>
                 </div>
