--- a/services/index.html
+++ b/services/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HVAC Services | Advanced Mechanical HVAC Services Southern California</title>
+    <title>Specialized HVAC & Ventilation Services | Advanced Mechanical</title>
     <meta name="description"
-        content="Professional HVAC services including AC repair, heating solutions, commercial HVAC, and air quality. Serving Los Angeles, Santa Clarita, and Los Angeles since 2008.">
+        content="Expert commercial kitchen ventilation, custom home HVAC, and institutional-grade climate control. Serving Los Angeles, Orange, and Ventura counties since 2008.">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,7 +51,7 @@
         <div class="hero-overlay"></div>
         <div class="container">
             <h1>Advanced Mechanical HVAC Services</h1>
-            <p class="hero-intent">Heating and Cooling Experts</p>
+            <p class="hero-intent">Kitchen Ventilation & Climate Control Specialists</p>
             <div class="hero-btns">
                 <a href="tel:8186602481" class="btn btn-primary">Call (818) 660-2481</a>
                 <a href="#services-grid" class="btn btn-secondary">Explore Services</a>
@@ -101,29 +101,33 @@
             <div class="av-explore-grid"
                 style="grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); max-width: 1200px; margin: 0 auto;">
 
-                <!-- Air Conditioning -->
-                <div class="premium-service-card" style="background-image: url('/images/ac-repair.webp');">
-                    <i class="fas fa-snowflake card-icon"></i>
-                    <h3>Air Conditioning</h3>
-                    <p>Repair, installation, and replacement of high-efficiency AC systems and heat pumps.</p>
-                    <a href="/services/air-conditioning/" class="learn-more">Service Details <i
+                <!-- Commercial Kitchen Ventilation (Flagship) -->
+                <div class="premium-service-card"
+                    style="background-image: url('/images/commercial-hvac.webp'); border: 5px solid var(--secondary-color);">
+                    <i class="fas fa-utensils card-icon"></i>
+                    <h3 style="font-size: 1.8rem;">Kitchen Ventilation</h3>
+                    <p>Our top-quality specialty. Custom hood installs, exhaust systems, and climate control for
+                        demanding commercial kitchen environments.</p>
+                    <a href="/services/commercial-hvac/" class="learn-more">Get Specialty Service <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
 
-                <!-- Heating Solutions -->
-                <div class="premium-service-card" style="background-image: url('/images/heating-service.webp');">
-                    <i class="fas fa-fire card-icon"></i>
-                    <h3>Heating Solutions</h3>
-                    <p>Gas furnace repair, electric heating, and high-efficiency heat pump installation.</p>
-                    <a href="/services/heating-solutions/" class="learn-more">Service Details <i
+                <!-- Custom Home HVAC -->
+                <div class="premium-service-card" style="background-image: url('/images/custom-hvac.webp');">
+                    <i class="fas fa-home card-icon"></i>
+                    <h3>Custom Home HVAC</h3>
+                    <p>Bespoke heating and cooling engineering for premium residential properties and architectural home
+                        builds.</p>
+                    <a href="/services/custom-hvac/" class="learn-more">Service Details <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
 
-                <!-- Commercial HVAC -->
+                <!-- Commercial Buildings -->
                 <div class="premium-service-card" style="background-image: url('/images/commercial-hvac.webp');">
                     <i class="fas fa-city card-icon"></i>
-                    <h3>Commercial HVAC</h3>
-                    <p>Rooftop units, institutional projects, and specialized tenant improvements.</p>
+                    <h3>Commercial Buildings</h3>
+                    <p>Institutional-grade HVAC solutions for offices, industrial sites, and multi-tenant commercial
+                        success.</p>
                     <a href="/services/commercial-hvac/" class="learn-more">Service Details <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
@@ -132,7 +136,8 @@
                 <div class="premium-service-card" style="background-image: url('/images/air-quality.webp');">
                     <i class="fas fa-wind card-icon"></i>
                     <h3>Indoor Air Quality</h3>
-                    <p>UV lights, HEPA filtration, and advanced air purification for health and wellness.</p>
+                    <p>Ensuring satisfactory environment climate control with advanced HEPA and UV purification systems.
+                    </p>
                     <a href="/services/air-quality/" class="learn-more">Service Details <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
@@ -141,7 +146,8 @@
                 <div class="premium-service-card" style="background-image: url('/images/maintenance.webp');">
                     <i class="fas fa-clipboard-check card-icon"></i>
                     <h3>Maintenance Plans</h3>
-                    <p>Biannual tune-ups to extend equipment life and ensure peak performance.</p>
+                    <p>Established in 2008, we provide long-term care to over 200 clients across Southern California.
+                    </p>
                     <a href="/services/maintenance-plans/" class="learn-more">Service Details <i
                             class="fas fa-arrow-right"></i></a>
                 </div>
